fixing letter spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@ html, body {
 	height: 100%;
 	font-family: $karla-sans;
 	color: $darkgray;
-	letter-spacing: 0.15px;
+	// letter-spacing: 0.15px;
 	overflow: hidden;
 
 	@include media($mobile) {
